--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
 # result files
-c1_t1_a1.csv
-c1_t2_a1.csv
-c2_t1_a1.csv
-c2_t2_a1.csv
+*.csv
+*Dataset/*
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
